--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/selenium-java-2.0a1.jar"/>
 	<classpathentry kind="lib" path="lib/suco-0.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/tigase-xmltools-2.3.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
