--- a/.classpath
+++ b/.classpath
@@ -7,8 +7,10 @@
 	<classpathentry kind="lib" path="lib/json-20080701.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-all-1.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-java-2.0a1.jar"/>
-	<classpathentry kind="lib" path="lib/suco-0.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/tigase-xmltools-2.3.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/aopalliance.jar"/>
+	<classpathentry kind="lib" path="lib/gin-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/guice-2.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
