--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,3 @@
-#Fri Jan 15 17:46:40 CET 2010
+#Fri Jan 15 21:13:28 CET 2010
 eclipse.preferences.version=1
-jarsExcludedFromWebInfLib=/home/dani/Emite/gwtbooka/lib/emite-snapshot.jar|/home/dani/Emite/gwtbooka/lib/json-20080701.jar|/home/dani/Emite/gwtbooka/lib/mockito-all-1.8.2.jar|/home/dani/Emite/gwtbooka/lib/selenium-java-2.0a1.jar|/home/dani/Emite/gwtbooka/lib/suco-0.7.0.jar|/home/dani/Emite/gwtbooka/lib/tigase-xmltools-2.3.0.jar
+jarsExcludedFromWebInfLib=/home/dani/Emite/gwtbooka/lib/emite-snapshot.jar|/home/dani/Emite/gwtbooka/lib/json-20080701.jar|/home/dani/Emite/gwtbooka/lib/mockito-all-1.8.2.jar|/home/dani/Emite/gwtbooka/lib/selenium-java-2.0a1.jar|/home/dani/Emite/gwtbooka/lib/suco-0.7.0.jar|/home/dani/Emite/gwtbooka/lib/tigase-xmltools-2.3.0.jar|/home/dani/Emite/gwtbooka/lib/aopalliance.jar|/home/dani/Emite/gwtbooka/lib/gin-1.0.jar|/home/dani/Emite/gwtbooka/lib/guice-2.0.jar
